# cancer_diagnostic_information_web_app

./: .gitignore  README.md  index.html  main.py  model_decipher.py  model_loader.py  pyproject.toml  web app.txt
TCGA-4P-AA8J-01Z-00-DX1.5B44796F-D099-4076-9CAF-B40C2B83F432/: annotations.json  metadata.json  metrics.csv
