[project]
name = "cancer-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.129.0",
    "geojson>=3.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "openslide-python>=1.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "tiffslide>=2.5.1",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
